test/typeCheckTest/pass/test38.ic
class TestIfStmtVarDecls{

    void catFun() {}
    
    void main(string [] args) {
        int varOne = 8;
        int varTwo = 3;
    
        if (varOne == 5) {
            int varDeclOne = 6;
            int varDeclTwo = 7;
        }
        else{
            int varDeclThree = 5; 
        }
    }
}
